@@ -1,9 +1,12 @@
 package fr.xpdustry.distributor.text;
 
-import fr.xpdustry.distributor.text.format.*;
 import java.util.*;
+import org.checkerframework.checker.nullness.qual.*;
 
 public final class Components {
+
+  private Components() {
+  }
 
   public static TextComponent empty() {
     return TextComponent.EMPTY;
@@ -22,19 +25,15 @@ public final class Components {
   }
 
   public static TextComponent text(final String content) {
-    return new TextComponent(content, TextStyle.empty());
+    return new TextComponent(content, null, Collections.emptyList());
+  }
+
+  public static TextComponent text(final String content, final @Nullable TextColor color, final TextDecoration... decorations) {
+    return new TextComponent(content, color, List.of(decorations));
   }
 
   public static TextComponent text(final String content, final TextDecoration... decorations) {
-    return new TextComponent(content, TextStyle.of(null, List.of(decorations)));
-  }
-
-  public static TextComponent text(final String content, final TextColor color, final TextDecoration... decorations) {
-    return new TextComponent(content, TextStyle.of(color, List.of(decorations)));
-  }
-
-  public static TextComponent text(final String content, final TextStyle style) {
-    return new TextComponent(content, style);
+    return new TextComponent(content, null, List.of(decorations));
   }
 
   public static ListComponent.Builder list() {
@@ -42,13 +41,14 @@ public final class Components {
   }
 
   public static ListComponent list(final Component... components) {
-    return new ListComponent(List.of(components), TextStyle.empty());
+    return new ListComponent(List.of(components), null, Collections.emptyList());
   }
 
-  public static ListComponent list(final List<Component> components) {
-    return new ListComponent(components, TextStyle.empty());
+  public static ListComponent list(final List<Component> components, final @Nullable TextColor color, final TextDecoration... decorations) {
+    return new ListComponent(components, color, List.of(decorations));
   }
 
-  private Components() {
+  public static ListComponent list(final List<Component> components, final TextDecoration... decorations) {
+    return new ListComponent(components, null, List.of(decorations));
   }
 }
